# flowpipe

./: .codeclimate.yml  .coveragerc  .deploy_doxygen.sh  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .tinypipeline.project.json  .travis.yml  AGENTS.md  CODE_OF_CONDUCT.md  LICENSE  README.md  config.dox  contributing.md  flowpipe-for-vfx-pipelines.md  flowpipe_graph.xsd  noxfile.py  pyproject.toml  readthedocs.yml  requirements-dev.txt  requirements.txt  setup.py  start_celery.bat  test-requirements.txt  test_requirements.txt  todo.todo  tox.ini
.codex/prompts/: speckit.implement.md  speckit.plan.md  speckit.specify.md  speckit.tasks.md  speckit.taskstoissues.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: coverage_badge.yml  main.yml  mypy.yml  pre-commit.yml  publish.yml  pylint.yml  pytest.yml  sphinx.yml
.specify/memory/: constitution.md
.specify/scripts/powershell/: update-agent-context.ps1
.specify/templates/: spec-template.md  tasks-template.md
docs/: api.rst  conf.py  example.ipynb  example_graphs.graphml  flowpipe-for-vfx-pipelines.md  flowpipe.rst  index.html  index.rst  modules.rst  release-notes.md  requirements.txt  ruff-formatting.md  workflow-pattern.rst
docs/examples/: dynamic_plug_names.rst  examples.rst  house_and_birthday.rst  nested_graphs.rst  vfx_render_farm_conversion.rst  vfx_rendering.rst  workflow_design_pattern.rst  world_clock.rst
docs/source/: conf.py  flowpipe.errors.rst  flowpipe.evaluator.rst  flowpipe.event.rst  flowpipe.graph.rst  flowpipe.node.rst  flowpipe.plug.rst  flowpipe.rst  flowpipe.utilities.rst  index.rst  modules.rst
docs/source/examples/: nested_graphs.rst  vfx_render_farm_conversion.rst  world_clock.rst
examples/: custom_evaluator.py  dynamic_plug_names.py  graph_plugs.py  house_and_birthday.py  nested_graphs.py  vfx_render_farm_conversion.py  vfx_rendering.py  workflow_design_pattern.py  world_clock.py
flowpipe/: __init__.py  __task.py  app.py  engine.py  errors.py  evaluator.py  event.py  fordocs.py  graph.py  log_observer.py  node.py  plug.py  serializer.py  stats_reporter.py  utilities.py
flowpipe/celery/: adapter.py  app.py
flowpipe/engines/: mayapy_engine.py  python_engine.py
flowpipe/nodes/: value_node.py
specs/000-test-speckit-v2/: plan.md
specs/001-ruff-formatting/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-ruff-formatting/checklists/: requirements.md
specs/001-ruff-formatting/contracts/: tooling.yaml
tests/: conftest.py  test_a.py  test_convert_function_to_node.py  test_engine.py  test_event.py  test_examples.py  test_flow.py  test_graph.py  test_inputpluggroup.py  test_iteration.py  test_log_observer.py  test_multiprocessing.py  test_node.py  test_plugs.py  test_serialization.py  test_stats_reporter.py  test_subgraphs.py  test_utilities.py
