[project]
name = "Flowpipe"
description = "A lightweight framework for flow-based programming in python."
license = "MIT"
dynamic = ["version", "classifiers"]
readme = "README.md"
authors = [{ name = "Paul Schweizer", email = "paulschweizer@gmx.net" }]
requires-python = '>=3.9'
dependencies = ['ascii-canvas>=2.0.0']

[project.urls]
repository = "https://github.com/PaulSchweizer/flowpipe"
documentation = "https://flowpipe.readthedocs.io/en/latest/"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.ruff]
line-length = 79
target-version = "py39"
src = ["flowpipe", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["flowpipe"]
lines-after-imports = 2

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "duplicate-code",
    "no-else-raise",
    "too-many-function-args",
    "too-many-locals",
    "too-many-arguments",
    "too-few-public-methods",
    "too-many-instance-attributes",
    "too-many-public-methods",
]

[tool.pylint.main]
py-version = "3.9"

[tool.poetry]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-poetry = '>=2.0'
version = "0.0.0"

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

[tool.poetry.group.dev.dependencies]
mock = "^5.1.0"
numpy = "^1.26.2"
pre-commit = "^3.5.0"
pylint = "^3.0.1"
pytest-cov = "^4.1.0"
pytest = "^7.4.2"
mypy = "^1.6.1"
ruff = "^0.7.0"
